[FIX] web: Refactor the mobile kanban tabs layout when user switching tab
The switching tab is now more closer to "Material Design"

This commit changes avoid text overlay when text tab is too long

This commit is linked to task ID: 1893168

--- a/addons/web/static/src/less/kanban_view_mobile.less
+++ b/addons/web/static/src/less/kanban_view_mobile.less
@@ -10,10 +10,11 @@
             height: @o-kanban-mobile-tabs-height;
             position: relative;
             background-color: #5E5E5E;
+            width: 100%;
+            display: flex;
+            overflow-x: auto;
 
             .o_kanban_mobile_tab {
-                .o-position-absolute(@left: 100%);
-                .o-transform(translateX(-50%));
                 height: @o-kanban-mobile-tabs-height;
                 padding: 10px;
                 font-size: 14px;
